# tfadm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
src/tfadm/: __init__.py  __main__.py  exceptions.py  module.py  path.py  properties.py  resources.py  settings.py  template.py
src/tfadm/methods/: __init__.py  sync.py  update.py
src/tfadm/methods/terraform/: __init__.py  import_.py  init.py  show.py
tests/: tfadm
